feat: expectations cards

--- a/src/index.html
+++ b/src/index.html
@@ -45,46 +45,78 @@
         </section>
         <section class="expectations main-width-block">
           <h2 class="section-title">Что Яндекс Практикум ждёт от тебя</h2>
-            <article class="expectations__card expectations__card_type_mentor">
-              <div class="expectations__card-content-wrapper">
-                <h3 class="expectations__card-title">Как от наставника:</h3>
-                <ul class="expectations__card-points">
-                  <li class="expectations__card-point">
-                    <span class="expectations__card-point-accent">помогать</span>студентам ставить цели, рефлексировать и делать выводы
-                  </li>
-                  <li class="expectations__card-point">
-                    <span class="expectations__card-point-accent">помогать</span>студентам ставить цели, рефлексировать и делать выводы
-                  </li>
-                  <li class="expectations__card-point">
-                    <span class="expectations__card-point-accent">помогать</span>студентам ставить цели, рефлексировать и делать выводы
-                  </li>
-                  <li class="expectations__card-point">
-                    <span class="expectations__card-point-accent">помогать</span>студентам ставить цели, рефлексировать и делать выводы
-                  </li>
-                  <li class="expectations__card-point">
-                    <span class="expectations__card-point-accent">помогать</span>студентам ставить цели, рефлексировать и делать выводы
-                  </li>
-                </ul>
-                <button class="expectations__card-button expectations__card-button_type_mentor">
-                  Хочу стать наставником
-                </button>
-              </div>
-              <div class="expectations__card-img"></div>
-            </article>
-            <article class="expectations__steps">
-              <h3 class="expectations__steps-title">Стать экспертом просто, как 1,2,3...</h3>
-              <ol class="expectations__steps-list">
-                <li class="expectations__steps-step  expectations__steps-step_with-arrow">
-                  <span class="expectations__steps-number">1</span>Выбери роль и заполни заявку
+          <article class="expectations__card expectations__card_type_mentor">
+            <div class="expectations__card-content-wrapper">
+              <h3 class="expectations__card-title">Как от наставника:</h3>
+              <ul class="expectations__card-points">
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
+                  делать выводы
                 </li>
-                <li class="expectations__steps-step">
-                  <span class="expectations__steps-number">2</span>Пройди отбор и бесплатное обучение
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
+                  делать выводы
                 </li>
-                <li class="expectations__steps-step">
-                  <span class="expectations__steps-number">3</span>Начни делиться знаниями со студентами Яндекс.Практикума
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
+                  делать выводы
                 </li>
-              </ol>
-            </article>
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
+                  делать выводы
+                </li>
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
+                  делать выводы
+                </li>
+              </ul>
+              <button class="expectations__card-button expectations__card-button_type_mentor">
+                Хочу стать наставником
+              </button>
+            </div>
+            <div class="expectations__card-img expectations__card-img_type_mentor"></div>
+          </article>
+          <article class="expectations__card expectations__card_type_review">
+            <div class="expectations__card-content-wrapper">
+              <h3 class="expectations__card-title">Как от ревьюера:</h3>
+              <ul class="expectations__card-points">
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
+
+                </li>
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
+                </li>
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
+                </li>
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
+                </li>
+                <li class="expectations__card-point">
+                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
+                </li>
+              </ul>
+              <button class="expectations__card-button expectations__card-button_type_review">
+                Хочу стать ревьюером
+              </button>
+            </div>
+            <div class="expectations__card-img expectations__card-img_type_review"></div>
+          </article>
+          <article class="expectations__steps">
+            <h3 class="expectations__steps-title">Стать экспертом просто, как 1,2,3...</h3>
+            <ol class="expectations__steps-list">
+              <li class="expectations__steps-step  expectations__steps-step_with-arrow">
+                <span class="expectations__steps-number">1</span>Выбери роль и заполни заявку
+              </li>
+              <li class="expectations__steps-step">
+                <span class="expectations__steps-number">2</span>Пройди отбор и бесплатное обучение
+              </li>
+              <li class="expectations__steps-step">
+                <span class="expectations__steps-number">3</span>Начни делиться знаниями со студентами Яндекс.Практикума
+              </li>
+            </ol>
+          </article>
         </section>
         <section class="vacancy main-width-block">
           <h2 class="section-title vacancy__title">Кого мы ищем</h2>
@@ -96,7 +128,8 @@
             <fieldset class="vacancy__filter-items">
               <input name="vacancy-type" value="programming" id="vacancy1" class="vacancy__filter-radio" type="radio">
               <label for="vacancy1" class="vacancy__filter-item">Аналитика</label>
-              <input checked name="vacancy-type" value="analys" id="vacancy2" class="vacancy__filter-radio" type="radio">
+              <input checked name="vacancy-type" value="analys" id="vacancy2" class="vacancy__filter-radio"
+                type="radio">
               <label for="vacancy2" class="vacancy__filter-item">Программирование</label>
               <input name="vacancy-type" value="design" id="vacancy3" class="vacancy__filter-radio" type="radio">
               <label for="vacancy3" class="vacancy__filter-item">Дизайн</label>
