feat: social banner

--- a/src/index.html
+++ b/src/index.html
@@ -326,9 +326,17 @@
             </li>
           </ul>
         </section>
-
+        <section class="chanel-banner main-width-block">
+          <div class="chanel-banner__content">
+            <div class="chanel-banner__text-wrapper">
+              <h2 class="chanel-banner__title">Интересна жизнь Яндекс практикума?</h2>
+              <p class="chanel-banner__caption">Подписывайтесь на наш Telegram-канал, будет интересно!</p>
+            </div>
+            <div class="chanel-banner__image"></div>
+          </div>
+          <button class="chanel-banner__button" type="button">Перейти на канал</button>
+        </section>
       </main>
-
       <footer class="footer main-width-block">
         <div class="footer__columns">
           <div class="footer__contacts">
