--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
               </a>
 
               <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
-                <div class="teaching__course-box">SQL</div>
+                <div class="teaching__course-box teaching__course-box_blue">SQL</div>
                 <div class="teaching__course teaching__course_sql">
                   <h5 class="teaching__course-title">Анализ данных</h5>
                   <p class="teaching__course-subtitle">SQL, аналитика, Data Science и архитектура данных</p>
@@ -83,24 +83,24 @@
               </a>
 
               <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
-                <div class="teaching__course-box">IT</div>
+                <div class="teaching__course-box teaching__course-box_yellow">IT</div>
                 <div class="teaching__course teaching__course_it">
                   <h5 class="teaching__course-title">Менеджмент</h5>
                   <p class="teaching__course-subtitle">Управление проектами, командами и IT-рекрутмент</p>
-                  <p class="teaching__course-amount">12 курсов</p>
+                  <p class="teaching__course-amount teaching__course-amount_dark">12 курсов</p>
                 </div>
               </a>
 
-              <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <a class="teaching__link teaching__link_right" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
                 <div class="teaching__course teaching__course_figma">
                   <h5 class="teaching__course-title">Дизайн</h5>
                   <p class="teaching__course-subtitle">Графический, коммуникационный, для интерфейсов и продуктов</p>
-                  <p class="teaching__course-amount">11 курсов</p>
+                  <p class="teaching__course-amount teaching__course-amount_dark">11 курсов</p>
                 </div>
-                <div class="teaching__course-box teaching__course-box_left">Figma</div>
+                <div class="teaching__course-box teaching__course-box_left teaching__course-box_yellow">Figma</div>
               </a>
 
-              <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <a class="teaching__link teaching__link_right" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
                 <div class="teaching__course teaching__course_traffic">
                   <h5 class="teaching__course-title">Маркетинг</h5>
                   <p class="teaching__course-subtitle">Интернет-маркетинг и управление трафиком</p>
@@ -108,24 +108,20 @@
                 </div>
                 <div class="teaching__course-box teaching__course-box_left">Трафик</div>
               </a>
-              <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <a class="teaching__link teaching__link_alone" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
                 <div class="teaching__course teaching__course_eng">
                   <h5 class="teaching__course-title">Английский</h5>
                   <p class="teaching__course-subtitle teaching__course-subtitle_s">Для работы и жизни</p>
                   <p class="teaching__course-amount">4 курса</p>
                 </div>
               </a>
-              <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
+              <a class="teaching__link teaching__link_alone" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
                 <div class="teaching__course teaching__course_all">
-                  <h5 class="teaching__course-title">Все курсы</h5>
+                  <h5 class="teaching__course-title teaching__course-title_light">Все курсы</h5>
                   <p class="teaching__course-subtitle teaching__course-subtitle_s"></p>
-                  <p class="teaching__course-amount">76 курсов</p>
+                  <p class="teaching__course-amount teaching__course-amount_light">76 курсов</p>
                 </div>
               </a>
-              <!-- <div class="teaching__links teaching__link_c">
-
-              </div> -->
-
             </div>
           </section>
 
