--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,78 @@
         <section class="section3">
 
         </section>
-        <section class="section4">
-
+        <section class="slides">
+          <button type="button" class="slides__button slides__button_type_prev"></button>
+          <div class="slides__inner main-width-block">
+            <h2 class="section-title">Что говорят наши сотрудники</h2>
+            <div class="slider">
+              <ul class="slider__inner">
+                <li class="slider__item">
+                  <div class="slider__item-inner slider__item-inner_type_text">
+                    <h4 class="slider__item-title">Улучшая мир</h4>
+                    <p class="slider__item-text">
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                    </p>
+                  </div>
+                  <div class="slider__item-caption">
+                    <h3 class="slider__item-person">Максим Чеченёв</h3>
+                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="slider__item-inner slider__item-inner_type_text">
+                    <h4 class="slider__item-title">Улучшая мир</h4>
+                    <p class="slider__item-text">
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                    </p>
+                  </div>
+                  <div class="slider__item-caption">
+                    <h3 class="slider__item-person">Максим Чеченёв</h3>
+                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="slider__item-inner slider__item-inner_type_text">
+                    <h4 class="slider__item-title">Улучшая мир</h4>
+                    <p class="slider__item-text">
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                    </p>
+                  </div>
+                  <div class="slider__item-caption">
+                    <h3 class="slider__item-person">Максим Чеченёв</h3>
+                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="slider__item-inner slider__item-inner_type_text">
+                    <h4 class="slider__item-title">Улучшая мир</h4>
+                    <p class="slider__item-text">
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                    </p>
+                  </div>
+                  <div class="slider__item-caption">
+                    <h3 class="slider__item-person">Максим Чеченёв</h3>
+                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="slider__item-inner slider__item-inner_type_text">
+                    <h4 class="slider__item-title">Улучшая мир</h4>
+                    <p class="slider__item-text">
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                    </p>
+                  </div>
+                  <div class="slider__item-caption">
+                    <h3 class="slider__item-person">Максим Чеченёв</h3>
+                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <button type="button" class="slides__button slides__button_type_next"></button>
         </section>
+
         <section class="expectations main-width-block">
           <h2 class="section-title">Что Яндекс Практикум ждёт от тебя</h2>
           <article class="expectations__card expectations__card_type_mentor">
