feat: slider logic

--- a/src/index.html
+++ b/src/index.html
@@ -64,16 +64,20 @@
 
         </section>
         <section class="slides">
-          <button type="button" class="slides__button slides__button_type_prev"></button>
-          <div class="slides__inner main-width-block">
+          <div class="main-width-block">
             <h2 class="section-title">Что говорят наши сотрудники</h2>
-            <div class="slider">
+          </div>
+          <div class="slider">
+            <button type="button" class="slider__control slider__control_type_prev"></button>
+            <div class="slider__wrapper main-width-block">
               <ul class="slider__inner">
                 <li class="slider__item">
                   <div class="slider__item-inner slider__item-inner_type_text">
                     <h4 class="slider__item-title">Улучшая мир</h4>
                     <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
+                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
+                      мне кажется, делаю мир чуть-чуть лучше
                     </p>
                   </div>
                   <div class="slider__item-caption">
@@ -85,7 +89,9 @@
                   <div class="slider__item-inner slider__item-inner_type_text">
                     <h4 class="slider__item-title">Улучшая мир</h4>
                     <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
+                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
+                      мне кажется, делаю мир чуть-чуть лучше
                     </p>
                   </div>
                   <div class="slider__item-caption">
@@ -97,7 +103,9 @@
                   <div class="slider__item-inner slider__item-inner_type_text">
                     <h4 class="slider__item-title">Улучшая мир</h4>
                     <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
+                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
+                      мне кажется, делаю мир чуть-чуть лучше
                     </p>
                   </div>
                   <div class="slider__item-caption">
@@ -109,7 +117,9 @@
                   <div class="slider__item-inner slider__item-inner_type_text">
                     <h4 class="slider__item-title">Улучшая мир</h4>
                     <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
+                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
+                      мне кажется, делаю мир чуть-чуть лучше
                     </p>
                   </div>
                   <div class="slider__item-caption">
@@ -121,7 +131,9 @@
                   <div class="slider__item-inner slider__item-inner_type_text">
                     <h4 class="slider__item-title">Улучшая мир</h4>
                     <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и, мне кажется, делаю мир чуть-чуть лучше
+                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
+                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
+                      мне кажется, делаю мир чуть-чуть лучше
                     </p>
                   </div>
                   <div class="slider__item-caption">
@@ -131,8 +143,8 @@
                 </li>
               </ul>
             </div>
+            <button type="button" class="slider__control slider__control_type_next"></button>
           </div>
-          <button type="button" class="slides__button slides__button_type_next"></button>
         </section>
 
         <section class="expectations main-width-block">
