feat: base Popup class

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
               <h3 class="quizz__title">Кто ты?</h3>
               <p class="quizz__text">Ответь на вопросы, а мы подскажем какая роль тебе подходит</p>
             </div>
-            <button class="quizz__btn btn">Выбери своего игрока!</button>
+            <button class="quizz__btn btn" type="button">Выбери своего игрока!</button>
           </div>
         </section>
 
@@ -523,6 +523,11 @@
           </p>
         </div>
       </footer>
+    </div>
+    <div class="popup">
+      <div class="popup__inner">
+        <button class="popup__close-btn" type="button"></button>
+      </div>
     </div>
   </div>
 </body>
