--- a/src/index.html
+++ b/src/index.html
@@ -71,49 +71,47 @@
           <section class="what-give main-width-block">
             <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
             <div class="what-give__container">
-              <!-- <div class="what-give__cards"> -->
               <ul class="what-give__cards-list">
-                <li class="what-give__card">
+                <li class="what-give__card what-give__animation">
                   <h4 class="what-give__card-title">
                     Общение с людьми из EdTech
                   </h4>
-                  <p class="what-give__card-text">
+                  <!-- <p class="what-give__card-text">
                     Ты станешь частью сообщества экспертов и посмотришь
                     на мир онлайн-образования изнутри
-                  </p>
+                  </p> -->
                 </li>
-                <li class="what-give__card">
+                <li class="what-give__card what-give__animation">
                   <h4 class="what-give__card-title">Саморазвитие</h4>
-                  <p class="what-give__card-text">
+                  <!-- <p class="what-give__card-text">
                     Публикуй статьи в нашем блоге и выступай на мероприятиях,
                     чтобы как можно больше людей узнали о тебе как об эксперте,
                     прокачивай свои soft skills
-                  </p>
+                  </p> -->
                 </li>
-                <li class="what-give__card">
+                <li class="what-give__card what-give__animation">
                   <h4 class="what-give__card-title">Дополнительный доход</h4>
-                  <p class="what-give__card-text">
+                  <!-- <p class="what-give__card-text">
                     Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
                     занятости 2–3 часа в день
-                  </p>
+                  </p> -->
                 </li>
-                <li class="what-give__card">
+                <li class="what-give__card what-give__animation">
                   <h4 class="what-give__card-title">
                     Возможность менять жизни людей к лучшему
                   </h4>
-                  <p class="what-give__card-text">
+                  <!-- <p class="what-give__card-text">
                     Тысячи наших студентов нуждаются в твоих знаниях и опыте —
                     не бойся ими делиться
-                  </p>
+                  </p> -->
                 </li>
-                <li class="what-give__card">
+                <li class="what-give__card what-give__animation">
                   <h4 class="what-give__card-title">Развитие внутри роли</h4>
-                  <p class="what-give__card-text">
+                  <!-- <p class="what-give__card-text">
                     Ты сможешь стать старшим наставником или сеньор-ревьювером
-                  </p>
+                  </p> -->
                 </li>
               </ul>
-              <!-- </div> -->
               <button class="what-give__btn">К открытым позициям</button>
             </div>
           </section>
@@ -402,5 +400,6 @@
         <footer class="footer"></footer>
       </div>
     </div>
+    <!-- <script src="./index.js" defer></script> -->
   </body>
 </html>
