feat: popup quizz styles

--- a/src/index.html
+++ b/src/index.html
@@ -527,6 +527,38 @@
     <div class="popup">
       <div class="popup__inner">
         <button class="popup__close-btn" type="button"></button>
+        <div class="quizz-form">
+          <h3 class="quizz-form__title">Найди свой путь в Яндекс Практикуме!</h3>
+          <p class="quizz-form__subtitle">Выбери утверждения, которые лучше описывают тебя</p>
+          <form name="quizz" class="quizz-form__form">
+            <div class="quizz-form__screen quizz-form__screen_number_first">
+              <fieldset form="quizz" class="quizz-form__fields">
+                <label class="quizz-form__answer">
+                  <input class="quizz-form__checkbox-hidden" type="checkbox" name="m1">
+                  <div class="quizz-form__checkbox-visible"></div>
+                  <span class="quizz-form__answer-text">Мне интересно помогать студентам ставить цели, рефлексировать и
+                    делать выводы</span>
+                </label>
+              </fieldset>
+              <button class="quizz-form__button quizz-form__button_type_end-quizz" type="button">
+                И еще пара вопросов
+              </button>
+            </div>
+            <div class="quizz-form__screen quizz-form__screen_number_second">
+              <fieldset form="quizz" class="quizz-form__fields">
+                <label class="quizz-form__answer">
+                  <input class="quizz-form__checkbox-hidden" type="checkbox" name="m1">
+                  <div class="quizz-form__checkbox-visible"></div>
+                  <span class="quizz-form__answer-text">Я хочу проводить вебинары 2-3 раза в месяц и давать обратную
+                    связь</span>
+                </label>
+              </fieldset>
+              <button class="quizz-form__button quizz-form__button_type_end-quizz" type="submit">
+                Круто! Узнаем кто ты?
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
