feat: vacancy page: header + footer

--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,13 @@
             <a class="header__question" href="#">Преимущества сотрудничества</a>
           </li>
           <li class="header__question-text">
-            <a class="header__question" href="#">Направления обучения</a>
+            <a class="header__question" href="#teaching">Направления обучения</a>
           </li>
           <li class="header__question-text">
             <a class="header__question" href="#">Отзывы</a>
           </li>
           <li class="header__question-text">
-            <a class="header__question" href="#">Частые вопросы</a>
+            <a class="header__question" href="#questions">Частые вопросы</a>
           </li>
         </ul>
         <button class="header__button">Кого мы ищем</button>
@@ -61,7 +61,7 @@
 
           </section>
 
-          <section class="teaching main-width-block">
+          <section class="teaching main-width-block" id="teaching">
             <h2 class="section-title teaching__title">Чему мы учим?</h2>
             <div class="teaching__box">
               <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/" alt="Каталог курсов яндекс практикума">
@@ -183,7 +183,7 @@
                   <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
                 </li>
               </ul>
-              <button class="expectations__card-button expectations__card-button_type_review">
+              <button onclick="document.location='./vacancy.html'" class="expectations__card-button expectations__card-button_type_review">
                 Хочу стать ревьюером
               </button>
             </div>
@@ -334,7 +334,7 @@
             <button class="vacancy__banner-button" type="button">Оставить отклик</button>
           </div>
         </section>
-        <section class="questions main-width-block">
+        <section class="questions main-width-block" id="questions">
           <h2 class="section-title">Нас часто спрашивают...</h2>
           <ul class="questions__accordeon">
             <li class="questions__accordeon-item">
