--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -6,7 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HackathonYandex-second-page</title>
 </head>
+
 <body>
-  <h1>ВТорая страница</h1>
+  <div class="page">
+    <div class="layout">
+
+      <header class="vacancy-header main-width-block">
+        <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума"></a>
+        <div class="vacancy-header__nav-bar">
+          <button class="vacancy-header__btn">Откликнуться</button>
+          <div class="vacancy-header__box">
+            <p class="vacancy-header__text">Поделиться предложением:</p>
+            <ul class="vacancy-header__links">
+              <li class="vacancy-header__link"><a class="vacancy-header__icon vacancy-header__icon_tg"></a></li>
+              <li class="vacancy-header__link"><a class="vacancy-header__icon vacancy-header__icon_wup"></a></li>
+            </ul>
+          </div>
+
+        </div>
+      </header>
+
+      <main class="content">
+
+      </main>
+
+      <footer class="vacancy-footer main-width-block">
+        <div class="vacancy-footer__icon"></div>
+        <p class="vacancy-footer__text">Мы ждем именно тебя!</p>
+        <button class="vacancy-header__btn vacancy-header__btn_big">Откликнуться</button>
+      </footer>
+
+    </div>
+  </div>
 </body>
 </html>
