feat: a part of main

--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
             </ol>
           </article>
         </section>
-        <section class="vacancy main-width-block">
+        <section class="vacancy main-width-block" id="vacancy">
           <h2 class="section-title vacancy__title">Кого мы ищем</h2>
           <form class="vacancy__filter">
             <select class="vacancy__filter-job">
