--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -26,8 +26,36 @@
         </div>
       </header>
 
-      <main class="content">
+      <main class="main-width-block main-second-page">
 
+        <section class="reviewer">
+          <a class="reviewer__link" href="./index.html#vacancy">← К списку вакансий</a>
+          <h1 class="reviewer__title">Ревьюер проектов</h1>
+          <p class="reviewer__text">Сейчас команда экспертов курса сформирована, но вы можете откликнуться в резерв. Будет здорово, если мы сможем посотрудничать — даже спустя несколько месяцев.</p>
+        </section>
+
+        <section class="about-practikum">
+          <p class="about-practikum__text">
+            Яндекс Практикум — это сервис онлайн-образования, доступный в России и Америке. Мы помогаем людям расти — на работе и в жизни. Студенты могут освоить новую специальность, заговорить на иностранном языке и получать удовольствие от того, чем занимаются — каждый день.
+          </p>
+          <p class="about-practikum__text">
+            На нашем факультете убеждены: каждый может стать специалистом по Data Science. Если вы считаете так же, у вас есть знания и опыт в области Data Science — вы можете стать ревьюером, который проверяет, оценивает и комментирует самостоятельные работы студентов.
+          </p>
+
+        </section>
+
+        <section class="about-job">
+          <div class="about-job__box">
+            <h2 class="about-job__title">Что делает ревьюер?</h2>
+          </div>
+          <div class="about-job__box">
+            <h2 class="about-job__title">Я хочу стать ревьюером. Меня возьмут?</h2>
+          </div>
+          <div class="about-job__box">
+            <h2 class="about-job__title">Я подхожу. Что вы можете мне предложить?</h2>
+          </div>
+
+        </section>
       </main>
 
       <footer class="vacancy-footer main-width-block">
