feat: page vacancy

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <a class="header__question" href="#teaching">Направления обучения</a>
           </li>
           <li class="header__question-text">
-            <a class="header__question" href="#">Отзывы</a>
+            <a class="header__question" href="#slides">Отзывы</a>
           </li>
           <li class="header__question-text">
             <a class="header__question" href="#questions">Частые вопросы</a>
@@ -61,7 +61,7 @@
 
           </section>
 
-        <section class="teaching main-width-block">
+        <section class="teaching main-width-block" id="teaching">
           <h2 class="section-title teaching__title">Чему мы учим?</h2>
           <div class="teaching__box">
             <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/"
@@ -133,7 +133,7 @@
         </section>
 
         </section>
-        <section class="slides">
+        <section class="slides" id="slides">
           <div class="main-width-block">
             <h2 class="section-title">Что говорят наши сотрудники</h2>
           </div>
