--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -47,12 +47,28 @@
         <section class="about-job">
           <div class="about-job__box">
             <h2 class="about-job__title">Что делает ревьюер?</h2>
+            <p class="about-job__text">Студенты учатся с помощью онлайн-тренажёра, а также выполняют самостоятельные работы, которые проверяет, оценивает и комментирует команда специалистов.</p>
+            <p class="about-job__text">Роль ревьюера в этом процессе очень важна: он проверяет задания студента и даёт обратную связь. Именно ревьюер решает: зачесть задание или нет. Также он даёт советы по улучшению задания, отмечает неточности, указывает на ошибки.</p>
           </div>
           <div class="about-job__box">
             <h2 class="about-job__title">Я хочу стать ревьюером. Меня возьмут?</h2>
+            <p class="about-job__text">Скорее всего — да, если вы:</p>
+            <ul class="about-job__list">
+              <li class="about-job__item">используете для анализа данных Python;</li>
+              <li class="about-job__item">умеете работать с библиотеками Pandas, NumPy, Matplotlib, Sklearn;</li>
+              <li class="about-job__item">знаете основы математического анализа, линейной алгебры, теории вероятности и статистики;</li>
+              <li class="about-job__item">готовы посвящать проекту от 15 часов в неделю.</li>
+            </ul>
           </div>
           <div class="about-job__box">
             <h2 class="about-job__title">Я подхожу. Что вы можете мне предложить?</h2>
+            <ul class="about-job__list">
+              <li class="about-job__item">удалённую работу с частичной занятостью, объём работы определяется индивидуально;</li>
+              <li class="about-job__item">обучение азам коммуникации и грамотному подходу к проверке проектов;</li>
+              <li class="about-job__item">постоянную практику и углубление знаний;</li>
+              <li class="about-job__item">возможность стать частью сообщества аналитиков, делающих образование качественным и доступным;</li>
+              <li class="about-job__item">возможность помочь начинающим специалистам усвоить важные базовые вещи и поверить в себя.</li>
+            </ul>
           </div>
 
         </section>
