--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         <section class="teaching main-width-block" id="teaching">
           <h2 class="section-title teaching__title">Чему мы учим?</h2>
           <div class="teaching__box">
-            <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/"
+            <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/programming/"
               alt="Каталог курсов яндекс практикума">
               <div class="teaching__course-box">С++</div>
               <div class="teaching__course teaching__course_c">
@@ -74,7 +74,7 @@
               </div>
             </a>
 
-            <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/"
+            <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/data-analysis/"
               alt="Каталог курсов яндекс практикума">
               <div class="teaching__course-box teaching__course-box_blue">SQL</div>
               <div class="teaching__course teaching__course_sql">
@@ -84,7 +84,7 @@
               </div>
             </a>
 
-            <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/"
+            <a class="teaching__link" target="_blank" href="https://practicum.yandex.ru/catalog/management/"
               alt="Каталог курсов яндекс практикума">
               <div class="teaching__course-box teaching__course-box_yellow">IT</div>
               <div class="teaching__course teaching__course_it">
@@ -94,7 +94,7 @@
               </div>
             </a>
 
-            <a class="teaching__link teaching__link_right" target="_blank" href="https://practicum.yandex.ru/catalog/"
+            <a class="teaching__link teaching__link_right" target="_blank" href="https://practicum.yandex.ru/catalog/design/"
               alt="Каталог курсов яндекс практикума">
               <div class="teaching__course teaching__course_figma">
                 <h5 class="teaching__course-title">Дизайн</h5>
@@ -104,7 +104,7 @@
               <div class="teaching__course-box teaching__course-box_left teaching__course-box_yellow">Figma</div>
             </a>
 
-            <a class="teaching__link teaching__link_right" target="_blank" href="https://practicum.yandex.ru/catalog/"
+            <a class="teaching__link teaching__link_right" target="_blank" href="https://practicum.yandex.ru/catalog/marketing/"
               alt="Каталог курсов яндекс практикума">
               <div class="teaching__course teaching__course_traffic">
                 <h5 class="teaching__course-title">Маркетинг</h5>
@@ -113,7 +113,7 @@
               </div>
               <div class="teaching__course-box teaching__course-box_left">Трафик</div>
             </a>
-            <a class="teaching__link teaching__link_alone" target="_blank" href="https://practicum.yandex.ru/catalog/"
+            <a class="teaching__link teaching__link_alone" target="_blank" href="https://practicum.yandex.ru/catalog/eng/"
               alt="Каталог курсов яндекс практикума">
               <div class="teaching__course teaching__course_eng">
                 <h5 class="teaching__course-title">Английский</h5>
