--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
         <section class="section2">
 
-          </section>
+        </section>
 
         <section class="teaching main-width-block" id="teaching">
           <h2 class="section-title teaching__title">Чему мы учим?</h2>
@@ -94,8 +94,8 @@
               </div>
             </a>
 
-            <a class="teaching__link teaching__link_right" target="_blank" href="https://practicum.yandex.ru/catalog/design/"
-              alt="Каталог курсов яндекс практикума">
+            <a class="teaching__link teaching__link_right" target="_blank"
+              href="https://practicum.yandex.ru/catalog/design/" alt="Каталог курсов яндекс практикума">
               <div class="teaching__course teaching__course_figma">
                 <h5 class="teaching__course-title">Дизайн</h5>
                 <p class="teaching__course-subtitle">Графический, коммуникационный, для интерфейсов и продуктов</p>
@@ -104,8 +104,8 @@
               <div class="teaching__course-box teaching__course-box_left teaching__course-box_yellow">Figma</div>
             </a>
 
-            <a class="teaching__link teaching__link_right" target="_blank" href="https://practicum.yandex.ru/catalog/marketing/"
-              alt="Каталог курсов яндекс практикума">
+            <a class="teaching__link teaching__link_right" target="_blank"
+              href="https://practicum.yandex.ru/catalog/marketing/" alt="Каталог курсов яндекс практикума">
               <div class="teaching__course teaching__course_traffic">
                 <h5 class="teaching__course-title">Маркетинг</h5>
                 <p class="teaching__course-subtitle">Интернет-маркетинг и управление трафиком</p>
@@ -113,8 +113,8 @@
               </div>
               <div class="teaching__course-box teaching__course-box_left">Трафик</div>
             </a>
-            <a class="teaching__link teaching__link_alone" target="_blank" href="https://practicum.yandex.ru/catalog/eng/"
-              alt="Каталог курсов яндекс практикума">
+            <a class="teaching__link teaching__link_alone" target="_blank"
+              href="https://practicum.yandex.ru/catalog/eng/" alt="Каталог курсов яндекс практикума">
               <div class="teaching__course teaching__course_eng">
                 <h5 class="teaching__course-title">Английский</h5>
                 <p class="teaching__course-subtitle teaching__course-subtitle_s">Для работы и жизни</p>
@@ -270,7 +270,8 @@
                   <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
                 </li>
               </ul>
-              <button onclick="document.location='./vacancy.html'" class="expectations__card-button expectations__card-button_type_review">
+              <button onclick="document.location='./vacancy.html'"
+                class="expectations__card-button expectations__card-button_type_review">
                 Хочу стать ревьюером
               </button>
             </div>
@@ -313,105 +314,16 @@
             </fieldset>
           </form>
           <ul class="vacancy__results">
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
-            <li class="vacancy__results-item">
-              <h3 class="vacancy__results-item-title">Наставник на курс "Мидл фронтенд-разработчик"</h3>
-              <div class="vacancy__results-item-description">
-                <p class="vacancy__results-item-paragraph">
-                  [Оплата за ведение группы]
-                </p>
-                <p class="vacancy__results-item-paragraph">
-                  [В среднем 35000 &#8381; в месяц]
-                </p>
-              </div>
-            </li>
+            <template id="vacancy-card">
+              <li class="vacancy__results-item">
+                <a class="vacancy__results-item-link" href="#">
+                  <h3 class="vacancy__results-item-title">Название позиции</h3>
+                  <p class="vacancy__results-item-description">
+                    оплата
+                  </p>
+                </a>
+              </li>
+            </template>
           </ul>
           <div class="vacancy__banner ">
             <div class="vacancy__banner-heading">
