--- a/src/index.html
+++ b/src/index.html
@@ -293,38 +293,43 @@
           </article>
         </section>
         <section class="vacancy main-width-block" id="vacancy">
-          <h2 class="section-title vacancy__title">Кого мы ищем</h2>
-          <form class="vacancy__filter">
-            <select class="vacancy__filter-job">
-              <option selected>Для наставников</option>
-              <option>Для ревьюеров</option>
+          <h2 class="section-title vacancy__title">Наши открытые предложения</h2>
+          <form class="vacancy__filter" name="vacancies">
+            <select name="type" class="vacancy__filter-job">
+              <option selected value="mentor">Для наставников</option>
+              <option value="reviewer">Для ревьюеров</option>
             </select>
             <fieldset class="vacancy__filter-items">
-              <input name="vacancy-type" value="programming" id="vacancy1" class="vacancy__filter-radio" type="radio">
-              <label for="vacancy1" class="vacancy__filter-item">Аналитика</label>
-              <input checked name="vacancy-type" value="analys" id="vacancy2" class="vacancy__filter-radio"
-                type="radio">
-              <label for="vacancy2" class="vacancy__filter-item">Программирование</label>
-              <input name="vacancy-type" value="design" id="vacancy3" class="vacancy__filter-radio" type="radio">
+              <input checked name="area" value="programming" id="vacancy1" class="vacancy__filter-radio"
+              type="radio">
+              <label for="vacancy1" class="vacancy__filter-item">Программирование</label>
+              <input name="area" value="analytics" id="vacancy2" class="vacancy__filter-radio" type="radio">
+              <label for="vacancy2" class="vacancy__filter-item">Аналитика</label>
+              <input name="area" value="design" id="vacancy3" class="vacancy__filter-radio" type="radio">
               <label for="vacancy3" class="vacancy__filter-item">Дизайн</label>
-              <input name="vacancy-type" value="marketing" id="vacancy4" class="vacancy__filter-radio" type="radio">
+              <input name="area" value="marketing" id="vacancy4" class="vacancy__filter-radio" type="radio">
               <label for="vacancy4" class="vacancy__filter-item">Маркетинг</label>
-              <input name="vacancy-type" value="management" id="vacancy5" class="vacancy__filter-radio" type="radio">
+              <input name="area" value="management" id="vacancy5" class="vacancy__filter-radio" type="radio">
               <label for="vacancy5" class="vacancy__filter-item">Менеджмент</label>
             </fieldset>
           </form>
+          <div class="vacancy__no-results">
+            <p class="vacancy__no-results-text">Таких вакансий пока нет &#128522;</p>
+            <p class="vacancy__no-results-text">Чтобы посмотреть другие, поменяйте критерии на ваше усмотрение</p>
+            <p class="vacancy__no-results-subscribe">А чтобы быть в курсе появления вакансий - подпишитесь на наш Telegram-канал</p>
+          </div>
           <ul class="vacancy__results">
-            <template id="vacancy-card">
-              <li class="vacancy__results-item">
-                <a class="vacancy__results-item-link" href="#">
-                  <h3 class="vacancy__results-item-title">Название позиции</h3>
-                  <p class="vacancy__results-item-description">
-                    оплата
-                  </p>
-                </a>
-              </li>
-            </template>
           </ul>
+          <template id="vacancy-card">
+            <li class="vacancy__results-item">
+              <a class="vacancy__results-item-link" href="#">
+                <h3 class="vacancy__results-item-title">Название позиции</h3>
+                <p class="vacancy__results-item-description">
+                  оплата
+                </p>
+              </a>
+            </li>
+          </template>
           <div class="vacancy__banner ">
             <div class="vacancy__banner-heading">
               <h3 class="vacancy__banner-title">Не нашёл подходящее предложение?</h3>
