Добавил уменьшение section-tetle при 700px и 450px

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="page">
       <div class="layout">
-        <header class="header">
+        <!-- <header class="header">
           <a
             class="header__logo"
             target="_blank"
@@ -33,10 +33,10 @@
             </li>
           </ul>
           <button class="header__button">Кого мы ищем</button>
-        </header>
+        </header> -->
 
         <main class="content">
-          <section class="section1 main-width-block">
+          <!-- <section class="section1 main-width-block">
             <div class="section1__main">
               <div class="section1__text">
                 <h2 class="section1__title">
@@ -66,7 +66,7 @@
               </div>
               <button class="quizz__btn btn">Выбери своего игрока!</button>
             </div>
-          </section>
+          </section> -->
 
           <section class="what-give main-width-block">
             <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
@@ -116,7 +116,7 @@
             </div>
           </section>
 
-          <section class="section3"></section>
+          <!-- <section class="section3"></section>
           <section class="section4"></section>
           <section class="section5"></section>
           <section class="vacancy main-width-block">
@@ -397,7 +397,7 @@
           </section>
         </main>
 
-        <footer class="footer"></footer>
+        <footer class="footer"></footer> -->
       </div>
     </div>
     <!-- <script src="./index.js" defer></script> -->
