--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@
                   делать выводы
                 </li>
               </ul>
-              <button class="expectations__card-button expectations__card-button_type_mentor">
+              <button onclick="document.location='./mentor.html'" class="expectations__card-button expectations__card-button_type_mentor">
                 Хочу стать наставником
               </button>
             </div>
