feat: created contactsPopup

--- a/src/index.html
+++ b/src/index.html
@@ -554,6 +554,11 @@
         </div>
       </div>
     </div>
+    <div class="popup popup_type_contacts">
+      <div class="popup__inner">
+        <button class="popup__close-btn" type="button"></button>
+      </div>
+    </div>
   </div>
 </body>
 
